# migrasql

./: .gitignore  Cargo.toml  README.md  skills-lock.json
docs/: csv-import-examples.md  csv-import-implementation.md
docs/plans/: 2026-03-01-import-schema-first-design.md  2026-03-01-import-schema-first-implementation.md
src/: cli.rs  dump.rs  import.rs  main.rs  migrate.rs  restore.rs
src/engine/: dialect.rs  mod.rs  mysql.rs  postgres.rs  value.rs
src/util/: mod.rs
src/util/dialects/: mysql.rs  postgres.rs
