[package]
name = "migrasquiel"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
indicatif = "0.17"
flate2 = "1.0"
async-trait = "0.1"
hex = "0.4"
futures = "0.3"
chrono = "0.4"
csv = "1.3"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "mysql", "chrono", "bigdecimal"] }
